REOPENED264090
[ThreadedCompositor] The compositing thread should not wait for paint threads
https://bugs.webkit.org/show_bug.cgi?id=264090
Summary [ThreadedCompositor] The compositing thread should not wait for paint threads
Carlos Garcia Campos
Reported 2023-11-02 07:10:14 PDT
If there's an async scrolling request the compositing thread might be busy just waiting for the painting threads. We can wait for them in the main thread, which is already expected to be blocked painting.
Attachments
Carlos Garcia Campos
Comment 1 2023-11-02 07:12:49 PDT
EWS
Comment 2 2023-11-08 05:34:45 PST
Committed 270388@main (2bf118e5bf78): <https://commits.webkit.org/270388@main> Reviewed commits have been landed. Closing PR #19884 and removing active labels.
Philippe Normand
Comment 3 2023-11-12 03:56:53 PST
This introduced flakyness in 2 tests at least. See bug 264700.
WebKit Commit Bot
Comment 4 2023-12-15 01:44:05 PST
Re-opened since this is blocked by bug 266466
Carlos Garcia Campos
Comment 5 2024-03-20 09:55:29 PDT
Note You need to log in before you can comment on or make changes to this bug.